[gd_scene load_steps=9 format=2]

[ext_resource path="res://GameAsset/GameEffectManager.gd" type="Script" id=1]
[ext_resource path="res://Modules/ShaderView/shader/blru.tres" type="Shader" id=2]
[ext_resource path="res://Modules/ShaderView/shader/halfTone.tres" type="Shader" id=3]
[ext_resource path="res://Modules/INTBackground/Prefab/MatrixManager.tscn" type="PackedScene" id=4]

[sub_resource type="ShaderMaterial" id=5]
shader = ExtResource( 3 )
shader_param/size = 7.0
shader_param/tw = 960.0
shader_param/th = 540.0
shader_param/c = Plane( 0, 0, 0, 0 )

[sub_resource type="ViewportTexture" id=1]
viewport_path = NodePath("show/Viewport2")

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 2 )
shader_param/ten = 2.0

[sub_resource type="ViewportTexture" id=6]
viewport_path = NodePath("show/Viewport2/temSprite1/Viewport1")

[node name="GameEffectManager" type="Node"]
script = ExtResource( 1 )

[node name="show" type="Sprite" parent="."]
material = SubResource( 5 )
position = Vector2( 480, 270 )
texture = SubResource( 1 )

[node name="Viewport2" type="Viewport" parent="show"]
process_priority = -8
size = Vector2( 960, 540 )
transparent_bg = true
render_target_v_flip = true

[node name="temSprite1" type="Sprite" parent="show/Viewport2"]
material = SubResource( 2 )
position = Vector2( 480, 270 )
texture = SubResource( 6 )

[node name="Viewport1" type="Viewport" parent="show/Viewport2/temSprite1"]
process_priority = -9
size = Vector2( 960, 540 )
transparent_bg = true
render_target_v_flip = true

[node name="MatrixManager" parent="." instance=ExtResource( 4 )]
